--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.3"
     kapt "androidx.room:room-compiler:2.2.3"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
